# psb-ev-awaitables

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml  clang-tidy.yml  codeql.yml  ctest.yml  lint.yml  update-vcpkg-baseline.yml
cmake/: psb-ev-awaitables-config.cmake
src/: CMakeLists.txt  async_awaitable.cpp  async_awaitable.h  async_awaitable_p.cpp  async_awaitable_p.h  interval_awaitable.cpp  interval_awaitable.h  interval_awaitable_p.cpp  interval_awaitable_p.h  io_awaitable.cpp  io_awaitable.h  io_awaitable_p.cpp  io_awaitable_p.h  psb_ev_awaitables_export.h  signal_awaitable.cpp  signal_awaitable.h  signal_awaitable_p.cpp  signal_awaitable_p.h  timed_io_awaitable.cpp  timed_io_awaitable.h  timed_io_awaitable_p.cpp  timed_io_awaitable_p.h  timeout_awaitable.cpp  timeout_awaitable.h  timeout_awaitable_p.cpp  timeout_awaitable_p.h
test/: CMakeLists.txt  async_awaitable.cpp  eager_coroutine.h  interval_awaitable.cpp  io_awaitable.cpp  signal_awaitable.cpp  timed_io_awaitable.cpp  timeout_awaitable.cpp  utils.h
